[package]
name = "monero-rust"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "monero_rust"
path = "src/main.rs"

[lib]
name = "monero_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
monero-serai = { git = "https://github.com/serai-dex/serai.git", rev = "fca567f61d36360b36c153819c98bccbe09d858b", subdirectory = "coins/monero" }
rand_core = "0.6.4"
zeroize = "1.6.0"
curve25519-dalek = { version = "^3.2", features = ["std"] }
sha3 = "0.10.8"
monero-generators = { git = "https://github.com/serai-dex/serai.git", rev = "fca567f61d36360b36c153819c98bccbe09d858b", subdirectory = "coins/monero/generators" }
hex = "0.4.3"
tokio = { version = "1.29.1", features = ["full"] }

[build-dependencies]
cbindgen = "0.24.0"
